// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage Component matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="px-2 py-2.5 bg-red-400 bg-opacity-50 border border-solid border-red-400"
  >
    <h2
      class="font-bold"
    >
      Error
    </h2>
    <p>
      Generic Error message
    </p>
  </div>
</DocumentFragment>
`;

exports[`ErrorMessage Component renders with an illustration 1`] = `
<DocumentFragment>
  <div
    class="px-2 py-2.5 bg-red-400 bg-opacity-50 border border-solid border-red-400"
  >
    <div
      class="flex flex-col items-center justify-center"
    >
      <img
        alt="Frustrated Illustration"
        class="opacity-80 mb-2.5"
        src="frustrated.png"
        width="80"
      />
    </div>
    <h2
      class="font-bold"
    >
      Error
    </h2>
    <p>
      Generic Error message
    </p>
  </div>
</DocumentFragment>
`;
